--- a/app/src/main/res/layout/row_list_test.xml
+++ b/app/src/main/res/layout/row_list_test.xml
@@ -1,33 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <data>
+    <com.tpa.xuiframework.view.GlideImageView
+            android:id="@+id/imageProfile"
+            android:layout_width="100dp"
+            app:defaultDrawable="@drawable/ic_launcher"
+            android:layout_height="100dp"/>
 
-        <variable
-                name="testData"
-                type="com.tpa.xuiframwork.entity.TestData"/>
-    </data>
+    <TextView
+            tools:text="text"
+            android:id="@+id/textTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
-    <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        <com.tpa.xuiframework.view.GlideImageViewCircle
-                android:layout_width="100dp"
-                app:url="@{testData.profile}"
-                app:testAttr="text"
-                app:defaultDrawable="@drawable/ic_launcher"
-                android:layout_height="100dp"/>
-
-        <TextView
-                tools:text="text"
-                android:text="@{testData.name}"
-                android:id="@+id/textTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-</layout>
+</LinearLayout>
