--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -5,9 +5,9 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <android.support.v7.widget.RecyclerView
+    <com.tpa.xuiframework.view.XRecyclerView
             android:id="@+id/recyclerView"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            app:itemWidth="200dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 </LinearLayout>
