--- a/app/src/main/res/layout/fragment_pagination_adapter.xml
+++ b/app/src/main/res/layout/fragment_pagination_adapter.xml
@@ -3,10 +3,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-
-    <FrameLayout
-            android:id="@+id/frameFragment"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent"/>
-
+    <com.tpa.xuiframework.view.XRecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 </LinearLayout>
