--- a/xuiframework/src/main/res/values/styles.xml
+++ b/xuiframework/src/main/res/values/styles.xml
@@ -10,8 +10,8 @@
 
 
     <style name="ActivityHeading">
-        <item name="android:textSize">20sp</item>
-        <item name="textStyle">light</item>
+        <item name="android:textSize">17sp</item>
+        <item name="fontIndex">1</item>
         <item name="android:gravity">start</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:maxLines">1</item>
