--- a/xuiframework/src/main/res/layout/activity_actionbar_drawer.xml
+++ b/xuiframework/src/main/res/layout/activity_actionbar_drawer.xml
@@ -29,7 +29,11 @@
                 app:contentInsetStart="0dp"
                 app:layout_scrollFlags="scroll|enterAlways|snap">
 
-            <include layout="@layout/merge_simple_drawer_layout"/>
+            <FrameLayout
+                android:id="@+id/frameDrawerContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
         </android.support.v7.widget.Toolbar>
 
 
