--- a/xuiframework/src/main/res/values/dialog_styles.xml
+++ b/xuiframework/src/main/res/values/dialog_styles.xml
@@ -23,6 +23,7 @@
     <style name="dialogHeader">
         <item name="android:layout_gravity">start</item>
         <item name="android:layout_marginBottom">20dp</item>
+        <item name="fontIndex">2</item>
         <item name="android:textSize">16sp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
