--- a/xuiframework/src/main/res/values/font_dimen.xml
+++ b/xuiframework/src/main/res/values/font_dimen.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <attr name="fontIndex" format="integer" />
+
     <declare-styleable name="CustomTextView">
-        <attr name="fontIndex" format="integer"/>
+        <attr name="fontIndex"/>
+    </declare-styleable>
+
+    <declare-styleable name="CustomButton">
+        <attr name="fontIndex" />
     </declare-styleable>
 </resources>
