--- a/xuiframework/src/main/res/values/styles.xml
+++ b/xuiframework/src/main/res/values/styles.xml
@@ -34,7 +34,8 @@
         <item name="android:minHeight">0dp</item>
         <item name="android:paddingTop">3dp</item>
         <item name="android:paddingBottom">3dp</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">12sp</item>
+        <item name="fontIndex">2</item>
         <item name="android:layout_height">36dp</item>
     </style>
 
