spinner, form builder

--- a/xuiframework/src/main/res/values/font_dimen.xml
+++ b/xuiframework/src/main/res/values/font_dimen.xml
@@ -9,4 +9,8 @@
     <declare-styleable name="CustomButton">
         <attr name="fontIndex" />
     </declare-styleable>
+
+    <declare-styleable name="CustomEditText">
+        <attr name="fontIndex" />
+    </declare-styleable>
 </resources>
