--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:windowBackground">@color/activityBg</item>
         <item name="android:textSize">15sp</item>
+        <item name="android:fontFamily">15sp</item>
     </style>
+
 
 </resources>
