form builder dependencies

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item type="id" name="frameFragment" />
+    <item name="checkTest" type="id" />
+    <item name="textLabel" type="id" />
+    <item name="editAnother" type="id" />
 </resources>
