--- a/xuiframework/src/main/res/values/colors.xml
+++ b/xuiframework/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="selectorGrey">#5c999999</color>
     <color name="textColor">#424242</color>
     <color name="tintColor">@color/textColor</color>
+
+    <color name="mdtp_accent_color">@color/tintColor</color>
+    <color name="mdtp_accent_color_dark">@color/tintColor</color>
 </resources>
