androidx, image picker

--- a/app/src/main/res/layout/merge_switch_drawer_layout.xml
+++ b/app/src/main/res/layout/merge_switch_drawer_layout.xml
@@ -27,7 +27,7 @@
         android:text="@string/rtl"
         android:textColor="@android:color/white"/>
 
-    <android.support.v7.widget.SwitchCompat
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switchRtl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
