--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -5,4 +5,9 @@
         <item>item 2</item>
         <item>item 3</item>
     </array>
+
+    <array name="gender">
+        <item>Male</item>
+        <item>Female</item>
+    </array>
 </resources>
