--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="testArray">
-        <item>item 1</item>
-        <item>item 2</item>
-        <item>item 3</item>
+        <item>spinner item 1</item>
+        <item>spinner item 2</item>
+        <item>spinner item 3</item>
     </array>
 
     <array name="gender">
