form wrap content

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -6,4 +6,5 @@
     <item name="textDependant" type="id" />
     <item name="editAnother" type="id" />
     <item name="radioOption" type="id" />
+    <item name="checkWrapDep" type="id" />
 </resources>
